fix sticky and overflow

--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -61,7 +61,6 @@ body {
 }
 
 .wrapper {
-    overflow-x: hidden;
 }
 
 .note {
