--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -8,7 +8,7 @@
 
 .sidebar__left {
     position: sticky;
-    top: 0rem;
+    top: 5.5rem;
     left: 0;
     height: calc(100vh - 5.5rem);
     width: 280px;
@@ -89,7 +89,7 @@
 
 .sidebar__right {
     position: sticky;
-    top: 0;
+    top: 5.5rem;
     right: 0px;
     height: calc(100vh - 5.5rem);
     width: 280px;
